--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta http-equiv="=X-UA-Compatible" content="ie=edge" />
     <titel>My Google Map</titel>
   </head>
-  <body></body>
+  <body>
+      <script>
+        </script>
+  </body>
 </html>
